--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,2 +1,15 @@
 server:
   port: 8080
+
+logging:
+  level:
+    root: info
+    org.springframework.web: debug
+    org.springframework.web.client: debug
+    org.springframework.boot.actuate.endpoint.web: info
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health, metrics
