--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <java.version>11</java.version>
         <mapstruct.version>1.5.4.Final</mapstruct.version>
         <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
+        <openapi-ui.version>1.7.0</openapi-ui.version>
     </properties>
 
     <dependencies>
@@ -58,6 +59,12 @@
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
             <version>${mapstruct.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>${openapi-ui.version}</version>
         </dependency>
 
     </dependencies>
